# goit-pythonweb-hw-06

./: README.md  alembic.ini  config.py  db.py  models.py  my_select.py  pyproject.toml  queries.py  seed.py
migrations/versions/: 13d649751711_description_of_changes.py
